; ModuleID = '/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_conn_addr_to_str.c'
source_filename = "/home/carl/AnghaBench/mongoose/extr_mongoose.c_mg_conn_addr_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_connection = type { i32 }
%union.socket_address = type { i32 }

@MG_SOCK_STRINGIFY_REMOTE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mg_conn_addr_to_str(%struct.mg_connection* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.mg_connection*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %union.socket_address, align 4
  store %struct.mg_connection* %0, %struct.mg_connection** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = call i32 @memset(%union.socket_address* %9, i32 0, i32 4)
  %11 = load %struct.mg_connection*, %struct.mg_connection** %5, align 8
  %12 = load i32, i32* %8, align 4
  %13 = load i32, i32* @MG_SOCK_STRINGIFY_REMOTE, align 4
  %14 = and i32 %12, %13
  %15 = call i32 @mg_if_get_conn_addr(%struct.mg_connection* %11, i32 %14, %union.socket_address* %9)
  %16 = load i8*, i8** %6, align 8
  %17 = load i64, i64* %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @mg_sock_addr_to_str(%union.socket_address* %9, i8* %16, i64 %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @memset(%union.socket_address*, i32, i32) #1

declare dso_local i32 @mg_if_get_conn_addr(%struct.mg_connection*, i32, %union.socket_address*) #1

declare dso_local i32 @mg_sock_addr_to_str(%union.socket_address*, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
